--- a/Inventory.API/appsettings.json
+++ b/Inventory.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "InventoryDBConnection": "Server=localhost;Port=5432;Database=Inventory;User Id=postgres;Password=Password@123"
+    "InventoryDBConnection": "Server=localhost;Port=5432;Database=Inventory;user id=postgres;Password=Password@123;pooling=true"
   },
   "Logging": {
     "LogLevel": {
