Update Domain Structure

--- a/Inventory.API/Inventory.API.csproj
+++ b/Inventory.API/Inventory.API.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infra.IoC\Infra.IoC.csproj" />
+    <ProjectReference Include="..\Inventory.Application\Inventory.Application.csproj" />
   </ItemGroup>
 
 
