Permission Pattern per Service

--- a/Inventory.Application/Inventory.Application.csproj
+++ b/Inventory.Application/Inventory.Application.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.Core\Domain.Core.csproj" />
     <ProjectReference Include="..\Inventory.Domain\Inventory.Domain.csproj" />
     <ProjectReference Include="..\LoggerService\LoggerService.csproj" />
   </ItemGroup>
