Update for Inventory API

--- a/Inventory.Domain/Inventory.Domain.csproj
+++ b/Inventory.Domain/Inventory.Domain.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Inventory.Exception\Inventory.Exception.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Aggregate\" />
+  </ItemGroup>
+
 </Project>
